@@ -1,5 +1,7 @@
 Changelog for mk-show-grants:
 
+   * Added --timestamp option.
+
 2007-12-16: version 1.0.7
 
    * Updated common code, added debugging.
